asgore
