# packages/rules/src/model/events/core.ts
@@ -334,6 +334,7 @@ export type CoreGameEvent =
       type: "abilityUsed";
       unitId: string;
       abilityId: string;
+      sourceCell?: Coord;
     }
   | {
       type: "unitHealed";
